# Trabalhos-Faculdade

./: README.md
Algoritmos/Algoritmos de ordenação/: Ordenacao  main.cpp
Algoritmos/AlgoritmosComPadrões/: main  mainPad.cpp
Algoritmos/AlgoritmosComPadrões/include/: BMH.h  pad.h
Algoritmos/AlgoritmosComPadrões/src/: BMH.cpp  pad.cpp
Algoritmos/Listas em Tad/include/: No.h
Algoritmos/Listas em Tad/src/: ListEnc.cpp  No.cpp
Algoritmos/Matrizes e Vetores em TAD/Matrizes e Vetores/: main.cpp
Algoritmos/Matrizes e Vetores em TAD/Matrizes especiais/: main.cpp
Algoritmos/Pilhas e Filas (Codeblocks)/Listas/: Listas.cbp  Listas.depend  Listas.layout  main.cpp
Algoritmos/Pilhas e Filas (Codeblocks)/Pilhas/: Pilhas.cbp  Pilhas.depend  Pilhas.layout  main.cpp
Estrutura de dados 2/Trabalho 1 (Proc. Carc)/: .gitignore  README.md  doc.md  main  main.cpp  registro.cpp  registro.hpp  tabelahash.cpp  tabelahash.hpp
Estrutura de dados 2/Trabalho 2 (Hash)/: .gitignore  CMakeLists.txt  benchmark_algoritmos.cpp  main.cpp  tempos_execucao_medias.csv
Estrutura de dados 2/Trabalho 2 (Hash)/include/: AlgForcaBruta.h  BMH.h  KMP.h  LZW.h  LZW_IA.h  RLE.h  registro.hpp  tabelahash.hpp
Estrutura de dados 2/Trabalho 2 (Hash)/src/: AlgForcaBruta.cpp  BMH.cpp  KMP.cpp  LZW.cpp  LZW_IA.cpp  RLE.cpp  registro.cpp  tabelahash.cpp
Estrutura de dados 2/Trabalho 2 (Hash)/txt/: divisao.md  promptsPraIA.md
Orientação a Objetos/Aulas/: .gitignore  JDK version fix  OlaMundo.java  README.md  codigo.txt
Orientação a Objetos/Aulas/Aula01/: pom.xml
(+73 files in other folders)
